# morph-diffusion

./: .gitignore  README.md  main.py  pyproject.toml
app/: cli.py  main.py  routes.py  schemas.py
morph/: __init__.py  audio.py  cache.py  conditioning.py  config.py  engine.py  interpolate.py  models.py  presets.py
notes/: conditioning_research.md  frontend_design_spec.md  next_steps.md  references.md
scratch/: four_anchor_generation.py  inspect_conditioning.py  inspect_generation_api.py  inspect_wrapper.py  lerp.py  slerp.py  test_audio_prompt.py  test_generate.py  test_morph_conditioning.py  test_morph_generate.py  ui.html
web/: index.html
